--- a/config/provider-metadata.yaml
+++ b/config/provider-metadata.yaml
@@ -1,9 +1,25 @@
-name: hashicorp/null
+name: kraftcloud/kraftcloud
 resources:
-    null_resource Resource - terraform-provider-null:
+    kraftcloud_instance Resource - terraform-provider-kraftcloud:
         subCategory: ""
-        description: The null_resource resource implements the standard resource lifecycle but takes no further action. The triggers argument allows specifying an arbitrary set of values that, when changed, will cause the resource to be replaced.
-        name: null_resource Resource - terraform-provider-null
-        title: null_resource Resource - terraform-provider-null
-        argumentDocs: {}
-        importStatements: []
+        description: Allows the creation of KraftCloud instances.
+        name: kraftcloud_instance Resource - terraform-provider-kraftcloud
+        title: kraftcloud_instance Resource - terraform-provider-kraftcloud
+        argumentDocs:
+            args: (List of String)
+            autostart: (Boolean)
+            boot_time_us: (Number)
+            created_at: (String)
+            dns: (String)
+            env: (Map of String)
+            handlers: (Set of String)
+            image: (String)
+            internal_port: (Number)
+            memory_mb: (Number)
+            port: (Number)
+            private_ip: (String)
+            service_group: (String)
+            state: (String)
+            uuid: (String) Unique identifier of the instance
+        importStatements:
+            - terraform import kraftcloud_instance.example 550e8400-e29b-41d4-a716-446655440000
